--- a/jQuery-Lesson/index.html
+++ b/jQuery-Lesson/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang ="ja">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>jquery</title>
+    <link rel="stylesheet" href="app.css"/>
   </head>
 
   <body>
+    <div class="box1"></div>
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
