--- a/jQuery-Lesson/index.html
+++ b/jQuery-Lesson/index.html
@@ -7,7 +7,24 @@
   </head>
 
   <body>
-    <div class="box1"></div>
+    <!-- <div class="box">
+      ↑box1をboxにし、7章記述↓this
+      <div class="box1 bg1"></div>
+      <div class="box1 bg2"></div>
+      <div class="box1 bg3"></div>
+      <div class="box1 bg4"></div>
+    </div> -->
+
+    <!-- 7章記述children -->
+    <h1>childrenサンプル</h1>
+    <button>クリック</button>
+    <h3>リスト</h3>
+    <ul>
+      <li>Home</li>
+      <li>Concept</li>
+      <li>Products</li>
+      <li>Access</li>
+    </ul>
     <script src="jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
